Adds shuffling and card slot functionality to deal button

--- a/main.html
+++ b/main.html
@@ -6,35 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/card-deck-css/css/cardstarter.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <div id="container">
-        <div id="instruction">After dealing your cards, you can choose to hold onto any number of cards to be part of
-            your final hand. The second round of cards will be dealt. Any winning combinations will add the respective
-            payouts to your total.
+    <div id="mainBody">
+        <div>Info Box</div>
+        <div id="infocontainer">
+            <div id="instruction">After dealing your cards, you can choose to hold onto any number of cards to be part
+                of
+                your final hand. The second round of cards will be dealt. Any winning combinations will add the
+                respective
+                payouts to your total.
+            </div>
+            <div id="payout">
+                Royal Flush 250
+                Straight Flush 50
+                4 of a Kind 25
+                Full House 9        
+                Flush 5
+                Straight 4
+                3 of a Kind 3
+                Two Pair 2
+                Pair 1
+            </div>
         </div>
-        <div id="payout">Royal Flush 250
-            Straight Flush 50
-            4 of a Kind 25
-            Full House 9
-            Flush 5
-            Straight 4
-            3 of a Kind 3
-            Two Pair 2
-            Pair 1
+        <div id="mainCards">
+            <div id="cardslot0"></div>
+            <div id="cardslot1"></div>
+            <div id="cardslot2"></div>
+            <div id="cardslot3"></div>
+            <div id="cardslot4"></div>
         </div>
+        <section id="shuffledMainCards"></section>
+        <div id="balance">Balance:</div>
+        <button>Deal</button>
     </div>
-
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <button>Deal</button>
 </body>
 
 </html>
