adds additional hold functionality

--- a/main.html
+++ b/main.html
@@ -16,10 +16,8 @@
         <div>Info Box</div>
         <div id="infocontainer">
             <div id="instruction">After dealing your cards, you can choose to hold onto any number of cards to be part
-                of
-                your final hand. The second round of cards will be dealt. Any winning combinations will add the
-                respective
-                payouts to your total.
+                of your final hand. The second round of cards will be dealt. Any winning combinations will add the
+                respective payouts to your total.
             </div>
             <div id="payout">
                 Royal Flush 250
