--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
         </div>
         <section id="shuffledMainCards"></section>
         <div id="balance">Balance:</div>
-        <button>Deal</button>
+        <button id="Deal">Deal</button>
     </div>
 </body>
 
