adds win condition function

--- a/index.html
+++ b/index.html
@@ -31,13 +31,7 @@
                 Pair 1
             </div>
         </div>
-        <div id="mainCards">
-            <div id="cardslot0"></div>
-            <div id="cardslot1"></div>
-            <div id="cardslot2"></div>
-            <div id="cardslot3"></div>
-            <div id="cardslot4"></div>
-        </div>
+        <div id="mainCards"></div>
         <section id="shuffledMainCards"></section>
         <div id="balance">Balance:</div>
         <button id="Deal">Deal</button>
