adds remaining check win functions and bug fixes

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div id="mainBody">
-        <div>Info Box</div>
+        <div id="infobox">Video Poker Information</div>
         <div id="infocontainer">
-            <div id="instruction">After dealing your cards, you can choose to hold onto any number of cards to be part
+            <div id="instruction">After drawing your cards, you can choose to hold onto any number of cards to be part
                 of your final hand. The second round of cards will be dealt. Any winning combinations will add the
                 respective payouts to your total.
             </div>
@@ -23,7 +23,7 @@
                 Royal Flush 250
                 Straight Flush 50
                 4 of a Kind 25
-                Full House 9        
+                Full House 9
                 Flush 5
                 Straight 4
                 3 of a Kind 3
