--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div id="mainCards"></div>
         <section id="shuffledMainCards"></section>
+        <div id="message"></div>
         <div id="balance">Balance:</div>
         <button id="Deal">Deal</button>
     </div>
