--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 respective payouts to your total.
             </div>
             <div id="payout">
-                Royal Flush 250
-                Straight Flush 50
-                4 of a Kind 25
-                Full House 9
-                Flush 5
-                Straight 4
-                3 of a Kind 3
-                Two Pair 2
-                Pair 1
+                Royal Flush 250<br>
+                Straight Flush 50<br>
+                4 of a Kind 25<br>
+                Full House 9<br>
+                Flush 5<br>
+                Straight 4<br>
+                3 of a Kind 3<br>
+                Two Pair 2<br>
+                Pair 1<br>
             </div>
         </div>
         <div id="mainCards"></div>
